src/main.c
@@ -257,6 +257,12 @@ main (int argc, char *argv[])
 
 	nm_g_type_init ();
 
+	/* Known to cause a possible deadlock unpon GDBus initialization:
+	 * https://bugzilla.gnome.org/show_bug.cgi?id=674885 */
+	g_type_ensure (G_TYPE_SOCKET);
+	g_type_ensure (G_TYPE_DBUS_CONNECTION);
+	g_type_ensure (NM_TYPE_BUS_MANAGER);
+
 	_nm_utils_is_manager_process = TRUE;
 
 	main_loop = g_main_loop_new (NULL, FALSE);
